--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build": "npx remnote-plugin validate && shx rm -rf dist && cross-env NODE_ENV=production webpack --color --progress && shx cp README.md dist && cd dist && bestzip ../PluginZip.zip ./*"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.15.0",
     "@remnote/plugin-sdk": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
