--- a/package.json
+++ b/package.json
@@ -11,13 +11,17 @@
   "dependencies": {
     "@google/generative-ai": "^0.15.0",
     "@remnote/plugin-sdk": "latest",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "katex": "^0.16.11",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-katex": "^3.0.1",
+    "react-markdown": "^9.0.1",
+    "remark-gfm": "^4.0.0"
   },
   "devDependencies": {
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
     "@types/node": "^18.0.3",
-    "@types/react": "^17.0.2",
+    "@types/react": "^18.3.3",
     "@types/react-dom": "^17.0.2",
     "autoprefixer": "^10.4.7",
     "bestzip": "^2.2.1",
