--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
   "author": "Nova",
   "name": "Gemini for RemNote",
-  "description": "Use Gemini in RemNote!",
+  "description": "Use Gemini in RemNote sidebar!",
   "enableOnMobile": false,
   "id": "Nova-gphbnyn",
   "manifestVersion": 1,
