--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,11 +3,12 @@
   "name": "Gemini for RemNote",
   "description": "Use Gemini in RemNote sidebar!",
   "enableOnMobile": false,
+  "unlisted":true,
   "id": "Nova-gphbnyn",
   "manifestVersion": 1,
   "version": {
     "major": 0,
-    "minor": 0,
+    "minor": 1,
     "patch": 1
   },
   "requestNative": false,
